# Research-IDE

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  start.bat  start.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  __init__.py  main.py  pyproject.toml  requirements.txt
backend/agents/code_agent/: code_agent.py
backend/agents/gap_miner/: gap_agent.py
backend/agents/idea_generator/: idea_agent.py
backend/agents/planner/: planner_agent.py
backend/agents/writer/: writer_agent.py
backend/api/routes/: agents.py  auth.py  llm_config.py  pipeline.py  project.py
backend/core/: config.py  database.py  llm_client.py  security.py
backend/models/: __init__.py  project.py  user.py
backend/scripts/: seed_papers.py
backend/services/: export_service.py
backend/services/intent/: intent_service.py
backend/services/retrieval/: retrieval_service.py
backend/tests/: test_agents.py
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  providers.tsx
frontend/app/(app)/: layout.tsx
frontend/app/(app)/dashboard/: page.tsx
frontend/app/(app)/projects/: page.tsx
frontend/app/(app)/projects/[id]/: layout.tsx  page.tsx
frontend/app/(app)/projects/new/: page.tsx
frontend/app/(app)/settings/llm/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/components/layout/: Sidebar.tsx
frontend/lib/: utils.ts
frontend/services/: api.ts
frontend/store/: useAuthStore.ts
(+8 files in other folders)
